# TAFFO-test

./: .gitignore  .gitmodules  magiclang2.sh  setenv.sh
JPEG/static-ext_lib/: README.md
JPEG/static-no_ext_lib/: README.md
axbench/: README.md  chkmake_all.py  chkval_all_better.py
axbench-j2a/: .gitignore  CMakeLists.txt
axbench-j2a/blackscholes/: CMakeLists.txt  Makefile  annotations.json  libvc.cpp
axbench-j2a/blackscholes/src/: blackscholes.c  blackscholes.cpp
axbench-j2a/fft/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  annotations.json  libvc.cpp
axbench-j2a/inversek2j/: CMakeLists.txt  annotations.json  libvc.cpp  run.sh
axbench-j2a/inversek2j/src/: inversek2j.cpp  kinematics.cpp
axbench-j2a/jmeint/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  annotations.json  libvc.cpp
axbench-j2a/jmeint/src/: jmeint.cpp  tritri.cpp
axbench-j2a/kmeans/: CMakeLists.txt  annotations.json  libvc.cpp
axbench-j2a/kmeans/src/: distance.cpp  kmeans.cpp  rgbimage.cpp
axbench-j2a/sobel/: CMakeLists.txt  Makefile  annotations.json  libvc.cpp  run.sh
axbench-j2a/sobel/src/: convolution.cpp  convolution.hpp  rgb_image.cpp  rgb_image.hpp  sobel.cpp
axbench-libvc/: .gitignore  CMakeLists.txt
axbench-libvc-nostruct/: CMakeLists.txt  README.md
axbench-libvc-nostruct/common/: img
axbench-libvc-nostruct/inversek2j/: CMakeLists.txt
axbench-libvc-nostruct/inversek2j/data/input/: theta_100K.data
axbench-libvc-nostruct/inversek2j/scripts/: inversek2j_dataGen.py
axbench-libvc-nostruct/inversek2j/src/: kinematics.hpp
axbench-libvc-nostruct/kmeans/: run_table.sh
axbench-libvc-nostruct/sobel/: run_table.sh
axbench-libvc/blackscholes/: CMakeLists.txt  run.sh  run_table.sh
axbench-libvc/blackscholes/src/: blackscholes.cpp
axbench-libvc/common/: img
axbench-libvc/inversek2j/: CMakeLists.txt  Makefile  run.sh
axbench-libvc/inversek2j/data/input/: theta_100K.data
axbench-libvc/inversek2j/scripts/: inversek2j_dataGen.py
axbench-libvc/inversek2j/src/: inversek2j.cpp  kinematics.cpp  kinematics.hpp
axbench-libvc/kmeans/: CMakeLists.txt  clean.sh  run.sh  run_table.sh  view.sh
axbench-libvc/kmeans/src/: distance.cpp  kmeans.cpp  rgbimage.cpp  segmentation.cpp  segmentation.hpp
axbench-libvc/sobel/: CMakeLists.txt  run.sh  run_table.sh
axbench-libvc/sobel/src/: convolution.cpp  convolution.hpp  rgb_image.cpp  sobel.cpp
axbench-nostruct/: Makefile.inc  chkval_all_better.py  collect_all.sh
axbench-nostruct/common/: img
axbench-nostruct/jmeint/: Makefile
axbench-nostruct/kmeans/: Makefile
axbench-nostruct/sobel/: Makefile  compile+collect.sh
axbench-static/: .gitignore  chksimilarbits.sh  chkval_all.sh  collect_all.sh
axbench-static-fe/: .gitignore  chkmake_all.py  common
axbench-static-fe/blackscholes/: Makefile
axbench-static-fe/fft/: Makefile  compile+collect.sh
axbench-static-nostruct/: .gitignore  chkval_all.sh
axbench-static-nostruct/fft/: run.sh  run2.sh
axbench-static-nostruct/inversek2j/: Makefile  compile+collect.sh
axbench-static-nostruct/jmeint/: compile+collect.sh
axbench-static-nostruct/jpeg/: Makefile
axbench-static-nostruct/kmeans/: compile+collect.sh  run.sh  run2.sh
axbench-static-nostruct/sobel/: run.sh
axbench-static/blackscholes/: Makefile
axbench-static/blackscholes_00/: CMakeLists.txt  compile+collect.sh  wrapper.cpp
axbench-static/blackscholes_01/: compile+collect.sh
axbench-static/blackscholes_B10/: compile+collect.sh  run2.sh
axbench-static/blackscholes_B11/: compile+collect.sh
axbench-static/blackscholes_B12/: compile+collect.sh
axbench-static/blackscholes_wrapper/: CMakeLists.txt  run.sh  wrapper.cpp
axbench-static/blackscholes_wrapper/data/input/: blackscholesTest_200K_B00.data
axbench-static/blackscholes_wrapper/src/: blackscholes.c  blackscholes.cpp
axbench-static/cmake/: FindLibVersioningCompiler.cmake
axbench-static/fft_00/: Makefile  run.sh  run2.sh
axbench-static/fft_01/: compile+collect.sh  run2.sh
axbench-static/fft_02/: Makefile  run.sh  run2.sh
axbench-static/inversek2j/: Makefile  run2.sh
axbench-static/inversek2j_00/: compile+collect.sh
axbench-static/inversek2j_01/: compile+collect.sh
axbench-static/inversek2j_02/: Makefile  compile+collect.sh  run2.sh
axbench-static/inversek2j_03/: compile+collect.sh  run.sh  run2.sh
axbench-static/inversek2j_04/: compile+collect.sh
axbench-static/inversek2j_05/: run.sh  (+1 more)
polybench-c-4.2.1-beta/: .gitignore  HELP.txt  allinststat.py  autotune.py  chkval_datamining.sh  chkval_everything.sh  chkval_everything_better.py  chkval_linear-algebra_blas.sh  chkval_linear-algebra_kernels.sh  chkval_linear-algebra_solvers.sh  chkval_medley.sh  chkval_stencils.sh  collect-fe-stats.sh  common_chkval.sh  common_compile.sh  compile.sh  compile_datamining.sh  compile_everything.sh  compile_linear-algebra_blas.sh  compile_linear-algebra_kernels.sh  compile_linear-algebra_solvers.sh  compile_medley.sh  compile_stencil.sh  locperanno.sh  magiclang.sh  multiconf_readme_template.txt  printfx.py  resultdiff.py  run.sh  run_conf.sh  run_experiment.sh  validate.py
polybench-c-4.2.1-beta-novra/: collect-fe-stats.sh  compile.sh  validate.py
simple-test-cases/: array1.c  array2.c  array3.c  calculator  calculator.c  caldaia.c  clang_push_attr.c  clang_push_attr.ll  constant_globals.c  cpp11attributes.cpp  cpp11attributes.ll  crash.ll  crash2.ll  difference-example.c  disabled-calls-2.c  disabled-calls.c  disabled-propagation.c  dta-conv-flag-regression.c  enqueueexample.c  function-double-indirection.c  function-ptr-NOT-WORKING-YET.c  function-ptr.c  function-return-ptr.c  function-return.c  function.c  global.c  imprecise_const.c  imprecise_const.ll  inlinetest.c  inlinetest2.c  kmeans-malloc-bug.c  magiclang2.sh  malloc.c  new-annotation-syntax.c  ompthreads.c  ompthreads.ll  phi-and-math.c  recompile-all.sh  run-test.sh  storebug.ll  (+29 more)
simple-test-cases-novra/: disabled-calls-2.c  function.c  inlinetest2.c  magiclang2.sh  malloc.c  recompile-all.sh  run-test.sh  struct_conversion_2.ll  struct_dta_1.ll  struct_integration_1.c
(+346 files in other folders)
